# tc4-mlops

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  desafio-tc4.md  pyproject.toml
data/kaggle/: README.md
docs/adr/: 0001-modelo-de-termos-canonicos-e-decisoes.md
docs/agents/: domain.md  issue-drafts-mvp-lary.md  issue-published-mvp-lary.md  issue-tracker.md  triage-labels.md
docs/data/: synthetic-schema.md
docs/decisions/: 001-fundacao-produto-plataforma-experimentacao-adaptativa.md  002-enriquecimento-contexto-bancario-emprestimos-garantia.md  003-checklist-planejamento-mvp-lary.md  004-checklist-operacional-issues.md  enriquecimento-contexto-bancario-emprestimos-garantia.md  fundacao-produto-plataforma-experimentacao-adaptativa.md
docs/demo/: cena-1-veiculo-digital.md  cena-2-imovel-complexo.md
docs/product/: mvp-lary.md  offer-arms.md  prd-proximo-passo-responsavel.md
docs/research/: market-cases-next-best-action.md
examples/synthetic-customers/: guardrail-sensitive.json  home-complex.json  vehicle-simple.json
personas/lary-cto-bu-loan/: 001-demanda-mvp-narrativo.md  001-resposta-mvp-narrativo.md  SOUL.md
src/responsible_next_step/: __init__.py  cli.py  engine.py
tests/: test_decision_cli.py
